# nonebot-plugin-sendmsg-by-bots

./: README.md  pyproject.toml
nonebot_plugin_sendmsg_by_bots/: __init__.py  config.py  tools.py
